# FastBBP

./: Cargo.toml  Readme.md
projects/bbp-core/: Cargo.toml
projects/bbp-core/src/: errors.rs  lib.rs
projects/bbp-core/src/helpers/: display.rs  logarithm.md  logarithm.wl  mixed.md  mod.rs  readme.md
projects/bbp-core/src/order_16/: display.rs  mod.rs
projects/bbp-core/src/order_256/: display.rs  mod.rs
projects/bbp-core/src/order_65536/: display.rs  mod.rs
projects/bbp-core/tests/: main.rs
projects/sato-core/: Cargo.toml  readme.md
projects/sato-core/benches/: vs.rs
projects/sato-core/src/: errors.rs  lib.rs
projects/sato-core/src/helpers/: display.rs  mod.rs  readme.md
projects/sato-core/src/order_1/: mod.rs  readme.md
projects/sato-core/src/order_2/: mod.rs
projects/sato-core/src/order_256/: display.rs  mod.rs
projects/sato-core/src/order_3/: display.rs  mod.rs  readme.md
projects/sato-core/tests/: main.rs
