[package]
name = "chudnovsky"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Calculate π using the Ramanujan–Sato series"
repository = "https://github.com/oovm/FastBBP"
documentation = "https://docs.rs/chudnovsky"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
dashu = "0.4.0"
num = "0.4.1"
latexify = "0.1.0"



[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "vs"
harness = false



[features]
default = []

[package.metadata.docs.rs]
all-features = true
